--- a/scss/2-helpers/_variables.scss
+++ b/scss/2-helpers/_variables.scss
@@ -7,6 +7,8 @@
   --lilac: #f5f4fa;
 
   //
+  --headerBottomBorder: #ececec;
+  --cardBackground: #f6f6f6;
   --boxShadow: #282932;
   --boxShadowCard: #92929d76;
 }
