--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,14 @@
 /***************************************/
 /**********HELPERS IMPORTS END**********/
 /***************************************/
+
+/***************************************/
+/**********LAYOUT IMPORTS START*********/
+/***************************************/
+
+@import "../scss/3-layout/header";
+@import "../scss/3-layout/footer";
+
+/***************************************/
+/**********LAYOUT IMPORTS END***********/
+/***************************************/
