--- a/scss/2-helpers/_common.scss
+++ b/scss/2-helpers/_common.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Montserrat" sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -18,6 +18,13 @@ main {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+}
+p {
+  margin: 0;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 h1,
 h2,
@@ -187,4 +194,22 @@ template {
   font-size: 36px;
   line-height: 42px;
   color: var(--black);
+}
+
+.btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  border: none;
+  background-color: var(--blue);
+  padding: 10px 32px;
+  color: var(--white);
+  border-radius: 4px;
+  box-shadow: 0px 3px 5px var(--boxShadow);
+  cursor: pointer;
+  transition: background-color 0.1s linear 0s;
+  &:active {
+    background-color: #1977c4;
+  }
 }
