--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "Roboto", "Montserrat" sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
