--- a/scss/2-helpers/_common.scss
+++ b/scss/2-helpers/_common.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
   margin: 0;
-  font-family: "Roboto", "Montserrat" sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
