optimization of render portfolio item is done

--- a/css/main.css
+++ b/css/main.css
@@ -346,6 +346,10 @@ template {
   display: block;
 }
 
+.footer__logo {
+  color: var(--white);
+}
+
 .footer__addres {
   margin: 20px 0 10px 0;
   color: var(--white);
