--- a/scss/3-layout/_footer.scss
+++ b/scss/3-layout/_footer.scss
@@ -8,7 +8,9 @@
     display: block;
   }
 }
-
+.footer__logo {
+  color: var(--white);
+}
 .footer__addres {
   margin: 20px 0 10px 0;
   color: var(--white);
