animation was added

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,29 @@
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 94px);
-  background-color: var(--lightBlack);
+  background-image: url("../../img/header/background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+.order::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba(47, 48, 58, 0.3725490196);
+  z-index: 1;
+}
+
+.order__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 10;
 }
 
 .order__title {
@@ -18,12 +40,6 @@
   text-transform: uppercase;
   color: var(--white);
   max-width: 696px;
-}
-
-.order__content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .order__btn {
@@ -47,6 +63,18 @@
   color: var(--grey);
 }
 
+.employment__desc-div {
+  background-color: var(--lilac);
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.employment__desc-div-icon {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 .employment__desc-item {
   max-width: 270px;
 }
@@ -65,6 +93,23 @@
 .employment__images {
   display: flex;
   justify-content: space-between;
+}
+
+.employment__images-inner {
+  position: relative;
+}
+
+.employment__images-desc {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--white);
+  font-weight: 700;
+  line-height: 16px;
+  width: 100%;
+  background: rgba(47, 48, 58, 0.8);
+  padding: 27px 0;
 }
 
 .employment__img {
@@ -126,6 +171,73 @@
   line-height: 19px;
   color: var(--grey);
   margin: 10px 0 30px 0;
+}
+
+.team__item-icons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+}
+
+.team__item-icon-link {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.team__item-icon-link::after {
+  content: "";
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 50%;
+  top: -50%;
+  transform: translate(50%, 8%);
+  z-index: -1;
+  transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team__item-icon-link:hover::after {
+  background-color: var(--blue);
+}
+.team__item-icon-link:hover svg path {
+  transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--white);
+}
+
+/**************************/
+/***TEAM CUSTOMERS END*****/
+/**************************/
+/**************************/
+/***TEAM CUSTOMERS START***/
+/**************************/
+.customers {
+  padding: 94px 0;
+}
+
+.customers__title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.customers__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.customers__item {
+  cursor: pointer;
+}
+.customers__item rect {
+  transition: stroke 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers__item path {
+  transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers__item:hover rect {
+  stroke: var(--blue);
+}
+.customers__item:hover path {
+  fill: var(--blue);
 }
 
 /**************************/
