--- a/scss/1-page/portfolio.scss
+++ b/scss/1-page/portfolio.scss
@@ -19,6 +19,8 @@
     font-size: 16px;
     line-height: 26px;
     color: var(--black);
+    transition: all 0.3s ease 0s;
+    &:hover,
     &.active {
       background-color: var(--blue);
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -34,7 +36,40 @@
 .portfolio__cards-item {
   background-color: var(--cardBackground);
   border-radius: 3px;
+  max-width: 370px;
+
+  transition: box-shadow 0.3s ease 0s;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
+.portfolio__cards-div {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio__card-description {
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  border-radius: 3px;
+  right: 2px;
+  bottom: 0;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 0 24px;
+  transform: translateY(100%);
+  line-height: 28px;
+  color: var(--white);
+  background: rgba(33, 150, 243, 0.9);
+}
+.portfolio__cards-item:hover .portfolio__card-description {
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transform: translateY(0);
+
+  padding: 63px 24px;
+}
+
 .portfolio__card-box {
   position: relative;
   top: -8px;
