popup was added

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 
 @import "../scss/3-layout/header";
 @import "../scss/3-layout/footer";
+@import "../scss/3-layout/order-popup";
 
 /***************************************/
 /**********LAYOUT IMPORTS END***********/
