--- a/scss/2-helpers/_variables.scss
+++ b/scss/2-helpers/_variables.scss
@@ -7,6 +7,9 @@
   --lilac: #f5f4fa;
 
   //
+  --fontFRoboto: "Roboto", sans-serif;
+  --fontFRaleway: "Raleway", sans-serif;
+  //
   --headerBottomBorder: #ececec;
   --cardBackground: #f6f6f6;
   --boxShadow: #282932;
@@ -14,4 +17,5 @@
 
   //
   --footerLinks: #44454e;
+  --popupInputBorder: #d3d3d3;
 }
