--- a/scss/1-page/portfolio.scss
+++ b/scss/1-page/portfolio.scss
@@ -66,7 +66,6 @@
 .portfolio__cards-item:hover .portfolio__card-description {
   transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   transform: translateY(0);
-
   padding: 63px 24px;
 }
 
@@ -91,4 +90,19 @@
   font-size: 16px;
   line-height: 30px;
   color: var(--grey);
+}
+
+@media screen and (max-width: 1200px) {
+  .portfolio__nav {
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: flex-start;
+  }
+  .portfolio__cards {
+    gap: 10px;
+  }
+  .portfolio__cards-item {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
