--- a/scss/2-helpers/_common.scss
+++ b/scss/2-helpers/_common.scss
@@ -1,12 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+* {
+  box-sizing: border-box;
+}
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--fontFRoboto);
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -106,11 +109,6 @@ select {
   text-transform: none;
 }
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -151,7 +149,6 @@ textarea {
   height: auto;
 }
 [type="search"] {
-  -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 [type="search"]::-webkit-search-decoration {
@@ -179,7 +176,7 @@ template {
   margin: 0 auto;
 }
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--fontFRaleway);
   display: block;
   font-weight: 700;
   font-size: 26px;
@@ -211,5 +208,11 @@ template {
   transition: background-color 0.1s linear 0s;
   &:active {
     background-color: #1977c4;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .title {
+    font-size: 28px;
   }
 }
